# borrowip

./: .gitignore  LICENSE  LLM_GUIDE.md  README.md  pyproject.toml
borrowip/: __init__.py  cli.py
borrowip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
borrowip/client/: codegen.py  connector.py  proxy.py  tunnel.py
borrowip/server/: fetcher.py  mcp_server.py  proxy_pool.py
scripts/: install-termux.sh
